# temporal-worker-sdk-k8s

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  FUTURE.md  README.md  instructions  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-parse-in-workflow.md
examples/: minimal_worker.py
k8s/: calculator-worker-add-hpa.yaml  calculator-worker-configmap.yaml  postgres-secret.yaml.example  postgres.yaml  temporal-dynamic-config.yaml  temporal.yaml  workers.yaml
scripts/: deploy.ps1  deploy.sh  stress_calculator_workers.py  trigger_calculator_workflow.py
specs/features/: api-workflow-activity-contracts.md  feature-autoscaling-bonus.md  feature-distributed-calculator-workflow.md  feature-kubernetes-deployment.md  feature-observability-graceful-shutdown.md  feature-worker-sdk.md
specs/requirements/: requirements-architecture.md  requirements-decisions.md  requirements-deliverables.md  requirements-llm-disclosure.md  requirements-project.md
specs/tasks/: api-workflow-activity-contracts.tasks.md  feature-autoscaling-bonus.tasks.md  feature-distributed-calculator-workflow.tasks.md  feature-kubernetes-deployment.tasks.md  feature-observability-graceful-shutdown.tasks.md  feature-worker-sdk.tasks.md  priority-and-dependency-order.md  (+1 more)
src/calculator/: __init__.py  (+7 more)
tests/: test_api_contract_constants.py  test_bootstrap.py  test_calculator_activities.py  test_calculator_lexer.py  test_calculator_parser.py  test_calculator_workflow_integration.py  test_config.py  test_errors_and_limits.py  test_observability.py  test_routing_matrix.py  test_worker_main.py
(+7 files in other folders)
