[tool.poetry]
name = "temporal-worker-sdk-k8s"
version = "0.1.0"
description = "Reusable Temporal worker bootstrap and config for the calculator reference stack."
readme = "README.md"
authors = []
packages = [
    { include = "temporal_worker_sdk", from = "src" },
    { include = "calculator", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
temporalio = ">=1.7.0,<2"
prometheus-client = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: hits real Temporal (excluded from default CI)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
